<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="sign_up">Sign up</string>
    <string name="or">or</string>
    <string name="sign_in">Sign in</string>
    <string name="log_in">Log in</string>
    <string name="your_password">Your password</string>
    <string name="your_email">Your email</string>
    <string name="create_an_account_to_get_started">Create an account to get started</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="log_in_to_your_account">Log in to your account</string>
</resources>